cabal-version:       >=1.10
name:                Game-Dangerous
version:             0.9.0.0
author:              Steven Tinsley
maintainer:          steven.tinsley81@gmail.com
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs: src
  exposed-modules:
    AL_buffer,
    Build_model,
    Decompress_map,
    Encode_status,
    Game_logic,
    Game_sound,
    Index_wrapper
  build-depends:
    base >=4.12 && <4.16,
    matrix >=0.3,
    split >=0.2,
    StateVar >=1.2,
    OpenAL >=1.7,
    ObjectName >=1.1,
    bytestring >=0.10,
    OpenGL >=3.0,
    array >=0.5,
    OpenGLRaw >=3.3,
    containers >=0.6,
    binary >= 0.8,
    GLURaw >=2.0,
    clock >=0.8,
    GLUT >=2.7,
    random >=1.2
  default-language: Haskell2010

executable game-dangerous
  main-is:             game_dangerous.hs
  hs-source-dirs: app
  build-depends:
    base >=4.12 && <4.16,
    matrix >=0.3,
    split >=0.2,
    StateVar >=1.2,
    OpenAL >=1.7,
    ObjectName >=1.1,
    bytestring >=0.10,
    OpenGL >=3.0,
    array >=0.5,
    OpenGLRaw >=3.3,
    containers >=0.6,
    binary >= 0.8,
    GLURaw >=2.0,
    clock >=0.8,
    GLUT >=2.7,
    random >=1.2,
    Game-Dangerous
  default-language:    Haskell2010

executable convert-message
  main-is:             conv_msg.hs
  hs-source-dirs: app
  build-depends:
    base >=4.12 && <4.16,
    matrix >=0.3,
    split >=0.2,
    StateVar >=1.2,
    OpenAL >=1.7,
    ObjectName >=1.1,
    bytestring >=0.10,
    OpenGL >=3.0,
    array >=0.5,
    OpenGLRaw >=3.3,
    containers >=0.6,
    binary >= 0.8,
    GLURaw >=2.0,
    clock >=0.8,
    GLUT >=2.7,
    random >=1.2,
    Game-Dangerous
  default-language:    Haskell2010

executable preprocess-map
  main-is:             Preprocess_map.hs
  hs-source-dirs: app
  build-depends:
    base >=4.12 && <4.16,
    matrix >=0.3,
    split >=0.2,
    StateVar >=1.2,
    OpenAL >=1.7,
    ObjectName >=1.1,
    bytestring >=0.10,
    OpenGL >=3.0,
    array >=0.5,
    OpenGLRaw >=3.3,
    containers >=0.6,
    binary >= 0.8,
    GLURaw >=2.0,
    clock >=0.8,
    GLUT >=2.7,
    random >=1.2,
    Game-Dangerous
  default-language:    Haskell2010

executable transform-model
  main-is:             transform_model.hs
  hs-source-dirs: app
  build-depends:
    base >=4.12 && <4.16,
    matrix >=0.3,
    split >=0.2,
    StateVar >=1.2,
    OpenAL >=1.7,
    ObjectName >=1.1,
    bytestring >=0.10,
    OpenGL >=3.0,
    array >=0.5,
    OpenGLRaw >=3.3,
    containers >=0.6,
    binary >= 0.8,
    GLURaw >=2.0,
    clock >=0.8,
    GLUT >=2.7,
    random >=1.2,
    Game-Dangerous
  default-language:    Haskell2010

executable import-model
  main-is:             import_model.hs
  hs-source-dirs: app
  build-depends:
    base >=4.12 && <4.16,
    matrix >=0.3,
    split >=0.2,
    StateVar >=1.2,
    OpenAL >=1.7,
    ObjectName >=1.1,
    bytestring >=0.10,
    OpenGL >=3.0,
    array >=0.5,
    OpenGLRaw >=3.3,
    containers >=0.6,
    binary >= 0.8,
    GLURaw >=2.0,
    clock >=0.8,
    GLUT >=2.7,
    random >=1.2,
    Game-Dangerous
  default-language:    Haskell2010
